fix: desktop async router call

--- a/apps/desktop/package.json
+++ b/apps/desktop/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "electron-updater": "^6.6.2",
     "get-port-please": "^3.1.2",
-    "pdfjs-dist": "4.10.38"
+    "pdfjs-dist": "4.10.38",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
